# arac

./: .gitignore  CMakeLists.txt  README_CMAKE.txt
src/python/arac/: pybrainbridge.py
src/swig/: CMakeLists.txt
